changes on the readme